# threshold-cascade-engine

./: .gitignore  LICENSE  README.md  app.py  gitignore  k_sweep_analysis.py  launch.sh  pyproject.toml  requirements-pinned.txt  requirements_gui.txt  runner.py  validation_section.py
cascade_engine/: Makefile  __init__.py  config.py  config_barabasi_albert.json  config_deterministic_with_sensitivity.json  config_erdos_renyi.json  config_stochastic_ba.json  config_stochastic_er.json  config_watts_strogatz.json  conftest.py  graph.py  graph_sparse.py  ingestion.py  metrics.py  monte_carlo.py  monte_carlo_parallel.py  progress.py  propagation.py  propagation_fast.py  requirements.txt  runner.py  sensitivity.py  stochastic_propagation.py  utils.py
cascade_engine/results_ba/: config_snapshot.json  experiment_metadata.json  fragility_results.csv  results_summary.csv  summary.json
cascade_engine/results_ba_sens/: config_snapshot.json  experiment_metadata.json  fragility_results.csv  monte_carlo_distribution.csv  results_summary.csv  sensitivity_aggregate.csv  sensitivity_results.csv  summary.json
cascade_engine/results_det_sens/: config_snapshot.json  experiment_metadata.json  fragility_results.csv  results_summary.csv  sensitivity_aggregate.csv  sensitivity_results.csv  summary.json
cascade_engine/results_er/: config_snapshot.json  experiment_metadata.json  fragility_results.csv  results_summary.csv  summary.json
cascade_engine/results_stoch/: config_snapshot.json  (+5 more)
tools/: data_adapter.py  report_gen.py  requirements.txt  scenario_manager.py  visualizer.py
(+7 files in other folders)
