[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cascade-engine"
version = "1.1.0"
description = "Vectorized threshold-based cascade propagation engine for directed graphs"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "numpy>=1.20.0",
    "networkx>=2.6",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "seaborn>=0.11.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
cascade-runner = "cascade_engine.runner:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cascade_engine*"]

[tool.pytest.ini_options]
testpaths = ["cascade_engine/tests"]
